tests/NormalTests/paczka2/big_fuzzy/52364248.err
Error in line 1: A8mKl6X S452 83,1
Error in line 16: A8mKl6X A796 6,2
Error in line 24: Fm1WF A796 22,7
Error in line 30: Fm1WF A79( 71,(
Error in line 17: m3mTCPq A453 26,0
Error in line 31: m3mTCPq A708 98,7
Error in line 38: m3mTCPq A796 83,7
Error in line 49: A8mKl6X A708 35,1
Error in line 51: VN2Mfg8OEn1 A796 91,8
Error in line 53: A8mKl6X A796 96,6
Error in line 63: A8mKl6X A453 83,8
Error in line 68: 5kZJC6S A708 21,9
Error in line 52: A453 A453 63,9
Error in line 69: 5kZJC6S A453 51,8
Error in line 70: Fm1WF A453 17,1
Error in line 73: Fm1WF S452 69,0
Error in line 71: A453 A708 65,5
Error in line 76: Qro A708 73,3
Error in line 81: Qro A453 87,2
Error in line 78: Fm1WF A453 43,2
Error in line 82: Qro A708 69,0
Error in line 104: 5kZJC6S A796 29,9
Error in line 105: Fm1WF S452 64,4
Error in line 108: Fm1WF A708 0,1
Error in line 117: Fm1WF A708 62,9
Error in line 128: A8mKl6X S452 232,7
Error in line 124: 5kZJC6S A708 92,8
Error in line 125: A453 A708 58,3
Error in line 151: VN2Mfg8OEn1 A453 53,7
Error in line 153: Fm1WF A708 55,6
Error in line 158: m3mTCPq A453 73,1
Error in line 159: m3mTCPq A796 48,6
Error in line 135: A8mKl6X A796 93,7
Error in line 157: Fm1WF A796 35,4
Error in line 177: Fm1WF A708 6,2
Error in line 185: 5kZJC6S A796 35,5
Error in line 190: 5kZJC6S A708 24,9
Error in line 188: A453 A708 85,3
Error in line 191: A8mKl6X S452 73,6
Error in line 182: Qro S452 86,9
Error in line 213: A453 A796 69,7
Error in line 218: A8mKl6X A796 87,8
Error in line 220: A8mKl6X A708 53,8
Error in line 225: Fm1WF S452 1,1
Error in line 227: Fm1WF A796 86,8
Error in line 236: m3mTCPq A708 95,4
Error in line 241: A453 A708 31,1
Error in line 221: VN2Mfg8OEn1 A796 32,7
Error in line 243: A453 S452 41,3
